icons - fix search close align, credit card align

--- a/site/styles/_icons.scss
+++ b/site/styles/_icons.scss
@@ -20,6 +20,10 @@
   font-size: 18px;
 }
 
+.fa-credit-card {
+  line-height: 0;
+}
+
 .fa-angle-down,
 .fa-angle-left,
 .fa-angle-right,
